added tab to website for dashboard

--- a/README.html
+++ b/README.html
@@ -182,6 +182,9 @@ $(document).ready(function () {
   <a href="plotly.html">plotly</a>
 </li>
 <li>
+  <a href="airbnb_dashboard.html">dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
